[package]
name = "evhz"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.4"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
lazy_static = "1.4"
